<resources>
    <string name="app_name">车贷贷2</string>
    <string name="phone_captcha_time_remain">%d秒重新获取</string>
    <string name="app_petty_loan">小额借款</string>
    <string name="app_extreme_mortgage">极速抵押</string>
    <string name="app_low_threshold">门槛低</string>
    <string name="app_low_threshold_car">有车就能借款</string>
    <string name="app_high_quota">额度高</string>
    <string name="app_high_quota_value">最高可估值80%</string>
    <string name="app_not_riding">不押车</string>
    <string name="app_not_riding_car">开车借款两不误</string>
    <string name="app_to_fast">到账快</string>
    <string name="app_to_fast_day">最快当日到账</string>
    <string name="app_cash_withdrawal_amount">可提现金额</string>
    <string name="app_withdraw">提现</string>
    <string name="app_mine_loan">我的贷款</string>
    <string name="app_mine_record">交易记录</string>
    <string name="app_mine_bank">我的银行卡</string>
    <string name="app_mine_more">更多</string>
    <string name="app_mine_login_register">登录/注册</string>
    <string name="app_mine_login_trend">手机动态登录</string>
    <string name="app_mine_login_password">密码登录</string>
    <string name="app_login_login">登录</string>
    <string name="app_login_forget_password">忘记密码</string>
    <string name="app_cellphone">请输入手机号码</string>
    <string name="app_authCode">请输入验证码</string>
    <string name="app_password">请输入密码</string>
    <string name="app_password_server">请输入服务密码</string>
    <string name="app_register">注册</string>
    <string name="app_affirm">确认</string>
    <string name="app_broker">经纪人</string>
    <string name="app_info">信息认证</string>
    <string name="app_info_petty">极速抵押，最高获取90%估值额度</string>
    <string name="app_info_data">当前资料完成度</string>
    <string name="app_info_phone">手机认证</string>
    <string name="app_info_status">信息认证</string>
    <string name="app_info_car">车辆信息</string>
    <string name="app_info_bank">银行卡信息</string>
    <string name="app_info_more">更多信息</string>
    <string name="app_info_jingdong">京东</string>
    <string name="app_info_taobao">淘宝</string>
    <string name="app_info_zhifu">支付</string>
    <string name="app_agree">同意</string>
    <string name="app_motion">《运营服务协议》</string>
    <string name="app_address">通讯录授权</string>
    <string name="app_location">位置授权</string>
    <string name="app_duanxin">短信授权</string>
    <string name="app_username">姓名</string>
    <string name="app_IDCard">身份证号</string>
    <string name="app_phone">手机号码</string>
    <string name="app_input_username">请输入您的姓名</string>
    <string name="app_sex">性别</string>
    <string name="app_education">学历</string>
    <string name="app_household">户籍</string>
    <string name="app_marriage">婚姻状况</string>
    <string name="app_detalis">详细地址</string>
    <string name="app_input_details">请填写详细地址</string>
    <string name="app_work">工作信息</string>
    <string name="app_relation">联系方式</string>
    <string name="app_live">居住信息</string>
    <string name="app_unit">工作单位</string>
    <string name="app_unit_input">请输入您的工作单位</string>
    <string name="app_unit_address">单位地址</string>
    <string name="app_detalis_address">详细地址</string>
    <string name="app_unit_detalis_address">请输入单位地址</string>
    <string name="app_unit_phone">单位电话</string>
    <string name="app_unit_phone_input">请输入您单位的电话</string>
    <string name="app_work_year">工作年限</string>
    <string name="app_submit">提交</string>
    <string name="app_month">月收入</string>
    <string name="app_regard">关系</string>
    <string name="app_relation_input">请输入联系认的姓名</string>
    <string name="app_relation_urgency">紧急联系人</string>
    <string name="app_house">住房状态</string>
    <string name="app_month_monry">月租金</string>
    <string name="app_house_money">请输入租房金额</string>
    <string name="app_prouduct">产权状态</string>
    <string name="app_position">职位</string>
    <string name="app_position_input">请输入您工作中的职位</string>
    <string name="app_car">车辆信息</string>
    <string name="app_car_type">车辆品牌</string>
    <string name="app_car_mark">车牌号</string>
    <string name="app_car_mark_input">请输入车牌号</string>
    <string name="app_km">公里数</string>
    <string name="app_km_input">请输入该车的跑过的公里数</string>
    <string name="app_if">是否抵押</string>
    <string name="app_user_time">过户时间</string>
    <string name="app_bankapprove">银行卡认证</string>
    <string name="app_bank_info">请填写银行卡信息</string>
    <string name="app_peopele">持卡人</string>
    <string name="app_bank_card">请填写持卡人的姓名</string>
    <string name="app_bank">银行</string>
    <string name="app_bankcard">卡号</string>
    <string name="app_bank_input">请输入卡号</string>
    <string name="app_province">省市</string>
    <string name="app_bank_open">开户行</string>
    <string name="app_bank_open_input">请输入开户行</string>
    <string name="app_obligate">预留手机</string>
    <string name="app_extreme">抵押贷款</string>
    <string name="app_province_server">服务城市</string>
    <string name="app_dot">门店</string>
    <string name="app_money">借款金额</string>
    <string name="app_hear_dot">受理门店</string>
    <string name="app_relations">联系方式</string>
    <string name="app_apply_money">申请金额</string>
    <string name="app_advance_money">提前还清借款</string>
    <string name="app_month_money">*按月息计算，月利率为3%</string>
    <string name="app_refund_time">还款期数</string>
    <string name="app_refund_first">首期还款</string>
    <string name="app_refund_day">还款日</string>
    <string name="app_refund_relation">还款详情</string>
    <string name="app_refund_morrow">*次日起可提前还款，免违约金</string>
    <string name="app_next">下一步</string>
    <string name="app_refund_base">每月应还本金￥100</string>
    <string name="app_refund_lend">借满5个月总利息￥122.75</string>
    <string name="app_lend_bank">借款银行卡</string>
    <string name="app_receipt">收款银行卡</string>
    <string name="app_receipt_detal">每月24日凌晨从此卡自动扣款</string>
    <string name="app_receipt_bank">查看支持银行</string>
    <string name="app_lendEntrymoney">借款金额（元）</string>
    <string name="app_lendEntryBank">收款账户</string>
    <string name="app_lendEntryInset">日利率</string>
    <string name="app_lendEntryStartTime">起止时间</string>
    <string name="app_lendEntryrefundTime">首次还款日</string>
    <string name="app_lendEntryDay">还款日</string>
    <string name="app_lendEntryDeadline">借款期限</string>
    <string name="app_lendEntryUse">借款用途</string>
    <string name="app_lendEntryBankId">还款银行卡</string>
    <string name="app_lendEntryIsuse">贷款发放人</string>
    <string name="app_lendEntryRead">请仔细阅读本借款信息，点击确认借钱表示同意遵守</string>
    <string name="app_lendEntryContract">《合同及相关协议》</string>
    <string name="app_lendEntryAffirm">确认借款</string>
    <string name="app_lendSucceed">完成</string>
    <string name="app_lendMoneyknow">借款须知</string>
    <string name="app_lendProblem">常见问题</string>
    <string name="app_insert">计息方式</string>
    <string name="app_insert_single">单期借款:按天计息，日息0.06%</string>
    <string name="app_insert_cash">现金分期:按月计息，日息1.88%</string>
    <string name="app_refund">还款方式</string>
    <string name="app_refundtime">还款日期自动从借款银行卡扣除</string>
    <string name="app_ahead">提前还款</string>
    <string name="app_aheadmoney">提前还款无需缴纳违约金</string>
    <string name="app_lendMonetStyle">借款方式</string>
    <string name="app_borrowmoney">我的借款</string>
    <string name="app_total">共一笔</string>
    <string name="app_refinance">申请续贷</string>
    <string name="app_borrowmoney_record">借款记录</string>
    <string name="app_borrowmoney_refund">还款记录</string>
    <string name="app_usersafety">账户安全</string>
    <string name="app_loanbean_indent">订单号</string>
    <string name="app_loanbean_time">借款时间</string>
    <string name="app_loanbean_money">借款金额</string>
    <string name="app_loanbean_month">借款时长</string>
    <string name="app_loanbean_interest">月利率</string>
    <string name="app_loanbean_refund">还款期数</string>
    <string name="app_loanbean_way">还款方式</string>
    <string name="app_applyfor">申请续贷</string>
    <string name="app_payoff_password">支付密码</string>
    <string name="app_login">登录密码</string>
    <string name="app_gesture">手势/指纹密码</string>
    <string name="app_setpayment">设置支付密码</string>
    <string name="app_amendpayment">修改支付密码</string>
    <string name="app_amendlogin">修改登录密码</string>
    <string name="app_forgetpayment">找回支付密码</string>
    <string name="app_save">保存</string>
    <string name="app_lendDetails">借款详情</string>
    <string name="app_property">产权状态</string>
    <string name="app_moreidea">意见反馈</string>
    <string name="app_morequestion">常见问题</string>
    <string name="app_moredot">门店地址</string>
    <string name="app_moremine">关于我们</string>
    <string name="app_moreserve">服务热线</string>
</resources>
