<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_work"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.cheddd.activity.WorkActivity">

    <com.cheddd.view.TopNavigationBar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tnb_work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigation_title="@string/app_work" />

    <View
        android:id="@+id/v"
        style="@style/ViewTop"
        android:layout_below="@id/tnb_work" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/v">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout style="@style/InfoRelativeLayout">

                <TextView
                    android:id="@+id/tv_work_unit"
                    style="@style/InfoTextView"
                    android:text="@string/app_unit" />

                <EditText
                    android:id="@+id/et_work_company"
                    style="@style/EditText"
                    android:layout_marginLeft="35dp"
                    android:layout_toRightOf="@id/tv_work_unit"
                    android:hint="@string/app_unit_input"
                    android:inputType="text" />
            </RelativeLayout>

            <View style="@style/ViewTop" />

            <RelativeLayout
                android:visibility="gone"
                style="@style/InfoRelativeLayout">

                <TextView
                    android:id="@+id/tv_work_unit_adress"
                    style="@style/InfoTextView"
                    android:text="@string/app_unit_address" />

                <TextView
                    android:id="@+id/tv_work_comAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="35dp"
                    android:layout_toRightOf="@id/tv_work_unit_adress"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="#333"
                    android:textSize="15sp" />

                <ImageView style="@style/RightImageView" />
            </RelativeLayout>

            <View style="@style/View" />

            <RelativeLayout style="@style/InfoRelativeLayout">

                <TextView
                    android:id="@+id/tv_work_detail"
                    style="@style/InfoTextView"
                    android:text="@string/app_unit_address" />

                <EditText
                    android:id="@+id/et_work_comAddress_detail"
                    style="@style/EditText"
                    android:layout_marginLeft="35dp"
                    android:layout_toRightOf="@id/tv_work_detail"
                    android:hint="@string/app_unit_detalis_address"
                    android:inputType="text" />
            </RelativeLayout>

            <View style="@style/View" />

            <RelativeLayout style="@style/InfoRelativeLayout">

                <TextView
                    android:id="@+id/tv_work_phone"
                    style="@style/InfoTextView"
                    android:text="@string/app_unit_phone" />

                <EditText
                    android:maxLength="11"
                    android:id="@+id/et_work_comTelno"
                    style="@style/EditText"
                    android:layout_marginLeft="35dp"
                    android:layout_toRightOf="@id/tv_work_phone"
                    android:hint="@string/app_unit_phone_input"
                    android:inputType="phone" />
            </RelativeLayout>

            <View style="@style/ViewTop" />

            <RelativeLayout style="@style/InfoRelativeLayout">

                <TextView
                    android:id="@+id/tv_work_year"
                    style="@style/InfoTextView"
                    android:text="@string/app_work_year" />

                <TextView
                    android:id="@+id/tv_work_experience"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="40dp"
                    android:layout_toRightOf="@id/tv_work_year"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="#333"
                    android:textIsSelectable="true"
                    android:textSize="15sp" />

                <ImageView style="@style/RightImageView" />
            </RelativeLayout>

            <View style="@style/View" />

            <RelativeLayout style="@style/InfoRelativeLayout">

                <TextView
                    android:id="@+id/tv_work_position"
                    style="@style/InfoTextView"
                    android:text="@string/app_position" />

                <EditText
                    android:id="@+id/et_work_position"
                    style="@style/EditText"
                    android:layout_marginLeft="65dp"
                    android:layout_toRightOf="@id/tv_work_position"
                    android:hint="@string/app_position_input" />
            </RelativeLayout>

            <View style="@style/View" />

            <RelativeLayout style="@style/InfoRelativeLayout">

                <TextView
                    android:id="@+id/tv_work_month"
                    style="@style/InfoTextView"
                    android:text="@string/app_month" />

                <TextView
                    android:id="@+id/tv_work_monthIncome"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="55dp"
                    android:layout_toRightOf="@id/tv_work_month"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="#333"
                    android:textSize="15sp" />

                <ImageView style="@style/RightImageView" />
            </RelativeLayout>

            <View style="@style/View" />

            <Button
                android:id="@+id/bt_work_finsh"
                style="@style/Button"
                android:layout_marginBottom="30dp"
                android:text="@string/app_submit" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
