<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bank_approve"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.cheddd.activity.BankApproveActivity">

    <com.cheddd.view.TopNavigationBar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tnb_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigation_title="@string/app_bankapprove" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout style="@style/InfoRelativeLayout">

                <TextView
                    style="@style/InfoTextView"
                    android:text="@string/app_bank_info" />
            </RelativeLayout>

            <View style="@style/ViewTop" />

            <RelativeLayout style="@style/InfoRelativeLayout">

                <TextView
                    android:id="@+id/tv_bank_people"
                    style="@style/InfoTextView"
                    android:text="@string/app_peopele" />

                <EditText
                    android:id="@+id/et_bank_peoplenme"
                    style="@style/EditText"
                    android:layout_marginLeft="45dp"
                    android:layout_toRightOf="@id/tv_bank_people"
                    android:hint="@string/app_bank_card" />
            </RelativeLayout>

            <View style="@style/View" />

            <RelativeLayout
                android:id="@+id/rl_bank_banks"
                style="@style/InfoRelativeLayout">

                <TextView
                    android:id="@+id/tv_bank_bank"
                    style="@style/InfoTextView"
                    android:text="@string/app_bank" />

                <TextView
                    android:id="@+id/tv_bank_banks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="65dp"
                    android:layout_toRightOf="@id/tv_bank_bank"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="#333"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

                <ImageView style="@style/RightImageView" />

            </RelativeLayout>

            <View style="@style/View" />

            <RelativeLayout style="@style/InfoRelativeLayout">

                <TextView
                    android:id="@+id/tv_bank_card"
                    style="@style/InfoTextView"
                    android:text="@string/app_bankcard" />

                <EditText
                    android:id="@+id/et_bank_card"
                    style="@style/EditText"
                    android:layout_marginLeft="60dp"
                    android:layout_toRightOf="@id/tv_bank_card"
                    android:hint="@string/app_bank_input"
                    android:inputType="number" />
            </RelativeLayout>

            <View style="@style/ViewTop" />

            <RelativeLayout
                android:id="@+id/rl_bank_province"
                style="@style/InfoRelativeLayout">

                <TextView
                    android:id="@+id/tv_bank_province"
                    style="@style/InfoTextView"
                    android:text="@string/app_province" />

                <TextView
                    android:id="@+id/tv_bank_provinces"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="70dp"
                    android:layout_toRightOf="@id/tv_bank_province"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="#333"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_bank_city"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/tv_bank_provinces"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="#333"
                    android:textSize="16sp" />

                <ImageView style="@style/RightImageView" />

            </RelativeLayout>

            <View style="@style/View" />

            <RelativeLayout style="@style/InfoRelativeLayout">

                <TextView
                    android:id="@+id/tv_bank_open"
                    style="@style/InfoTextView"
                    android:text="@string/app_bank_open" />

                <EditText
                    android:id="@+id/et_bank_open"
                    style="@style/EditText"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@id/tv_bank_open"
                    android:hint="@string/app_bank_open_input" />
            </RelativeLayout>

            <View style="@style/View" />

            <RelativeLayout style="@style/InfoRelativeLayout">

                <TextView
                    android:id="@+id/tv_bank_obligate"
                    style="@style/InfoTextView"
                    android:text="@string/app_obligate" />

                <EditText
                    android:id="@+id/et_bank_obligate"
                    style="@style/EditText"
                    android:layout_marginLeft="35dp"
                    android:layout_toRightOf="@id/tv_bank_obligate"
                    android:hint="@string/app_cellphone"
                    android:inputType="number" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground">

                <CheckBox
                    android:id="@+id/cb_bankapprove_is"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="10dp"
                    android:checked="true"
                    android:gravity="center_vertical" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@id/cb_bankapprove_is"
                    android:gravity="center_vertical"
                    android:text="代扣协议"
                    android:textColor="@color/colorRed"
                    android:textSize="12sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/bt_bank_sunmit"
                style="@style/Button"
                android:layout_marginBottom="20dp"
                android:text="@string/app_submit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="1.只可绑定您本人的借记银行卡，不可绑定信用卡和向信用卡提现。" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="2.请确保您输入的开户行、开户行名称、银行账号信息准确无误。" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="3.代扣协议" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
