<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forget_payment_activty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cheddd.activity.ForgetPaymentActivty">

    <com.cheddd.view.TopNavigationBar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tnb_forgetpayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigation_title="@string/app_forgetpayment" />

    <RelativeLayout style="@style/MineRelativeLayout">

        <TextView
            android:id="@+id/tv_forgetpayment_phone"
            style="@style/InfoTextView"
            android:text="手机号" />

        <EditText
            android:id="@+id/et_forgetpayment_phone"
            style="@style/EditText"
            android:layout_toRightOf="@id/tv_forgetpayment_phone"
            android:hint="@string/app_cellphone"
            android:inputType="phone"
            android:maxLength="11" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <RelativeLayout style="@style/MineRelativeLayout">

        <TextView
            android:id="@+id/tv_forgetpayment_auth"
            style="@style/InfoTextView"
            android:text="验证码" />

        <EditText
            android:id="@+id/et_forgetpayment_authcode"
            style="@style/EditText"
            android:layout_toRightOf="@id/tv_forgetpayment_auth"
            android:hint="@string/app_authCode"
            android:inputType="number"
            android:maxLength="4" />

        <TextView
            android:id="@+id/tv_forgetpayment_authcode"
            style="@style/AuthCode"
            android:layout_marginRight="10dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/bt_forgetpayment_next"
        style="@style/Button"
        android:layout_marginTop="30dp"
        android:text="@string/app_next" />
</LinearLayout>
