<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_extreme_mortage"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.cheddd.activity.ExtremeMortageActivity">

    <com.cheddd.view.TopNavigationBar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tnb_extreme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigation_title="@string/app_extreme" />

    <View style="@style/ViewTop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout style="@style/InfoRelativeLayout">

                <TextView
                    android:id="@+id/tv_province_server"
                    style="@style/InfoTextView"
                    android:text="@string/app_province_server" />

                <TextView
                    android:id="@+id/tv_extreme_provinces"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="40dp"
                    android:layout_toRightOf="@id/tv_province_server"
                    android:gravity="center_vertical"
                    android:text="" />

                <ImageView style="@style/RightImageView" />
            </RelativeLayout>

            <View style="@style/View" />

            <RelativeLayout style="@style/InfoRelativeLayout">

                <TextView
                    android:id="@+id/tv_extreme_dot"
                    style="@style/InfoTextView"
                    android:text="@string/app_dot" />

                <TextView
                    android:id="@+id/tv_extreme_dots"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="70dp"
                    android:layout_toRightOf="@id/tv_extreme_dot"
                    android:gravity="center_vertical"
                    android:text="" />

                <ImageView style="@style/RightImageView" />
            </RelativeLayout>

            <View style="@style/View" />

            <RelativeLayout style="@style/InfoRelativeLayout">

                <TextView
                    android:id="@+id/tv_extreme_money"
                    style="@style/InfoTextView"
                    android:text="@string/app_money" />

                <EditText
                    android:maxLength="10"
                    android:id="@+id/et_extreme_money"
                    style="@style/EditText"
                    android:layout_toRightOf="@id/tv_extreme_money"
                    android:hint="请输入金额" />
            </RelativeLayout>

            <Button
                android:id="@+id/bt_extreme_submit"
                style="@style/Button"
                android:text="@string/app_submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
